# simple-world-sim-cpp

./: .gitignore  Animal.cpp  Animal.h  CMakeLists.txt  Organism.cpp  Organism.h  Plant.cpp  Plant.h  PlantChunk.cpp  PlantChunk.h  README.md  Renderer.cpp  Renderer.h  Simulation.cpp  Simulation.h  World.cpp  World.h  WorldListener.cpp  WorldListener.h  info  main.cpp  util.h
animals/: Antilope.cpp  Antilope.h  Fox.cpp  Fox.h  Human.cpp  Human.h  Sheep.h  Turtle.cpp  Turtle.h  Wolf.cpp  Wolf.h
plants/: Belladonna.cpp  Belladonna.h  Grass.h  Guarana.cpp  Guarana.h  H_Sosnowskyi.cpp  H_Sosnowskyi.h  Sonchus.cpp  Sonchus.h
